# ice

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO.txt  cpplint.py  ice_config.h.in
lib/cmake/: CodeCoverage.cmake  FindGMock.cmake
lib/gmock-1.6.0/: config.status  libtool
lib/gmock-1.6.0/gtest/: config.status  libtool
lib/gmock-1.6.0/gtest/lib/.libs/: libgtest.so.0.0.0  libgtest_main.la
lib/gmock-1.6.0/gtest/samples/.deps/: sample2.Plo  sample4.Plo
lib/gmock-1.6.0/gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
lib/gmock-1.6.0/lib/: libgmock.la  libgmock_main.la
lib/gmock-1.6.0/lib/.libs/: libgmock.lai  libgmock_main.lai  libgmock_main.so.0.0.0
lib/gmock-1.6.0/scripts/: gmock-config
lib/gmock-1.6.0/src/.deps/: gmock-all.Plo  gmock_main.Plo
src/: berg_reader.cc  berg_reader.h  berg_reader_test.cc  berg_writer.cc  berg_writer.h  berg_writer_test.cc  chunk.cc  chunk.h  chunk_test.cc  digest.cc  digest.h  digest_test.cc  floe.cc  floe.h  floe_test.cc  ice.cc  ice.h  ice_test.cc  magic.h
src/cli/: berg.cc  berg.h
